# remote-stream-downloader

./: .dockerignore  Dockerfile  README.md  build-and-deploy.ps1  build-and-deploy.sh  docker-compose.yml  env.example  pyproject.toml  requirements.txt
app/: __init__.py  config.py  downloader.py  main.py
